- test update StaffService